--- a/views/500.jade
+++ b/views/500.jade
@@ -3,6 +3,8 @@ html
   head
     link(rel="stylesheet", href="https://fonts.googleapis.com/icon?family=Material+Icons")
     // STYLES
+    link(rel="stylesheet", href="/vendor/material-design-lite/material.min.css")
+    link(rel="stylesheet", href="/styles/importer.css")
     // STYLES END
 
   body
