--- a/views/index.jade
+++ b/views/index.jade
@@ -3,16 +3,28 @@ html
   head
     link(rel="stylesheet", href="https://fonts.googleapis.com/icon?family=Material+Icons")
     // STYLES
+    link(rel="stylesheet", href="/vendor/material-design-lite/material.min.css")
+    link(rel="stylesheet", href="/styles/importer.css")
     // STYLES END
 
   body
     #page
+    i.material-icons Home
 
     // DEPENDENCIES
+    script(src="/js/dependencies/core/jquery/jquery.min.js")
+    script(src="/js/dependencies/core/handlebars/handlebars.js")
+    script(src="/js/dependencies/core/underscore/underscore.js")
+    script(src="/js/dependencies/core/backbone/backbone.js")
+    script(src="/js/dependencies/sails.io.js")
     // END DEPENDENCIES
 
     // TEMPLATES
+    
     // TEMPLATES END
 
     // SCRIPTS
+    script(src="/js/dependencies/sails.io.js")
+    script(src="/vendor/material-design-lite/material.min.js")
+    script(src="/vendor/moment/moment.js")
     // SCRIPTS END
