--- a/views/index.jade
+++ b/views/index.jade
@@ -9,7 +9,7 @@ html
 
   body
     #page
-    i.material-icons Home
+    i.material-icons home
 
     // DEPENDENCIES
     script(src="/js/dependencies/core/jquery/jquery.min.js")
@@ -24,7 +24,6 @@ html
     // TEMPLATES END
 
     // SCRIPTS
-    script(src="/js/dependencies/sails.io.js")
     script(src="/vendor/material-design-lite/material.min.js")
     script(src="/vendor/moment/moment.js")
     // SCRIPTS END
