[ADDED] Install polymer. Added to logical place in assets

--- a/views/index.jade
+++ b/views/index.jade
@@ -16,6 +16,7 @@ html
     script(src="/js/dependencies/core/handlebars/handlebars.js")
     script(src="/js/dependencies/core/underscore/underscore.js")
     script(src="/js/dependencies/core/backbone/backbone.js")
+    script(src="/js/dependencies/core/webcomponentsjs/webcomponents.js")
     script(src="/js/dependencies/sails.io.js")
     // END DEPENDENCIES
 
