[ADDED] Component to test polymer with

--- a/assets/templates/pages/home.handlebars
+++ b/assets/templates/pages/home.handlebars
@@ -3,6 +3,6 @@
 </h2>
 <div class='mdl-grid'>
   <div class='mdl-cell mdl-cell--3-col'>
-    <paper-input label='First Name' pattern="-?[A-z,a-z'\-]*" auto-validate error-message='This cannot be right...' char-counter>
+    {{view 'components/text/input'}}
   </div>
 </div>
