--- a/views/index.jade
+++ b/views/index.jade
@@ -21,6 +21,7 @@ html
     link(rel="import", href="/vendor/paper-checkbox/paper-checkbox.html")
     link(rel="import", href="/components/cjd-input.html")
     // TEMPLATES
+    script(type="text/javascript", src="/templates/components/text/input.js")
     script(type="text/javascript", src="/templates/pages/buttons.js")
     script(type="text/javascript", src="/templates/pages/home.js")
     // TEMPLATES END
@@ -31,6 +32,7 @@ html
     script(src="/js/libs/view.js")
     script(src="/js/application/application.js")
     script(src="/js/application/init.js")
+    script(src="/js/application/components/text/input.js")
     script(src="/js/application/pages/buttons.js")
     script(src="/js/application/pages/home.js")
     // SCRIPTS END
