[ADDED] model and collection

--- a/views/index.jade
+++ b/views/index.jade
@@ -28,7 +28,9 @@ html
 
     // SCRIPTS
     script(src="/vendor/moment/moment.js")
+    script(src="/js/libs/collection.js")
     script(src="/js/libs/handlebars_helpers.js")
+    script(src="/js/libs/model.js")
     script(src="/js/libs/view.js")
     script(src="/js/application/application.js")
     script(src="/js/application/init.js")
