--- a/assets/templates/pages/home.handlebars
+++ b/assets/templates/pages/home.handlebars
@@ -3,6 +3,6 @@
 </h2>
 <div class='mdl-grid'>
   <div class='mdl-cell mdl-cell--3-col'>
-    {{view 'components/text/input'}}
+    {{view 'components/card/main' data=components.text}}
   </div>
 </div>
