--- a/views/index.jade
+++ b/views/index.jade
@@ -16,11 +16,9 @@ html
     script(src="/js/dependencies/sails.io.js")
     // END DEPENDENCIES
     link(rel="import", href="/vendor/polymer/polymer.html")
-    link(rel="import", href="/vendor/paper-input/paper-input.html")
-    link(rel="import", href="/vendor/paper-input/paper-textarea.html")
-    link(rel="import", href="/vendor/paper-checkbox/paper-checkbox.html")
-    link(rel="import", href="/components/cjd-input.html")
+    link(rel="import", href="/vendor/paper-card/paper-card.html")
     // TEMPLATES
+    script(type="text/javascript", src="/templates/components/card/main.js")
     script(type="text/javascript", src="/templates/components/text/input.js")
     script(type="text/javascript", src="/templates/pages/buttons.js")
     script(type="text/javascript", src="/templates/pages/home.js")
@@ -34,6 +32,7 @@ html
     script(src="/js/libs/view.js")
     script(src="/js/application/application.js")
     script(src="/js/application/init.js")
+    script(src="/js/application/components/card/main.js")
     script(src="/js/application/components/text/input.js")
     script(src="/js/application/pages/buttons.js")
     script(src="/js/application/pages/home.js")
