--- a/views/index.jade
+++ b/views/index.jade
@@ -1,7 +1,7 @@
 doctype html
 html
   head
-    link(rel="stylesheet", href="https://fonts.googleapis.com/icon?family=Material+Icons")
+    //- link(rel="stylesheet", href="https://fonts.googleapis.com/icon?family=Material+Icons")
     link(rel="stylesheet", href="https://code.getmdl.io/1.1.2/material.blue_grey-orange.min.css")
     // STYLES
     link(rel="stylesheet", href="/styles/importer.css")
@@ -17,7 +17,12 @@ html
     // END DEPENDENCIES
     link(rel="import", href="/vendor/polymer/polymer.html")
     link(rel="import", href="/vendor/paper-card/paper-card.html")
+    link(rel="import", href="/vendor/paper-button/paper-button.html")
+    link(rel="import", href="/vendor/iron-icons/iron-icons.html")
+    link(rel="import", href="/vendor/iron-icon/iron-icon.html")
+    
     // TEMPLATES
+    script(type="text/javascript", src="/templates/components/button/main.js")
     script(type="text/javascript", src="/templates/components/card/main.js")
     script(type="text/javascript", src="/templates/components/text/input.js")
     script(type="text/javascript", src="/templates/pages/buttons.js")
@@ -32,6 +37,7 @@ html
     script(src="/js/libs/view.js")
     script(src="/js/application/application.js")
     script(src="/js/application/init.js")
+    script(src="/js/application/components/button/main.js")
     script(src="/js/application/components/card/main.js")
     script(src="/js/application/components/text/input.js")
     script(src="/js/application/pages/buttons.js")
