[ADDED] button styles

--- a/assets/templates/components/button/main.handlebars
+++ b/assets/templates/components/button/main.handlebars
@@ -1,5 +1,5 @@
 {{#if display.raised}}
-<paper-button raised>
+<paper-button raised class="{{display.button_color}} {{display.text_color}}">
 {{else}}
 <paper-button>
 {{/if}}
