--- a/views/index.jade
+++ b/views/index.jade
@@ -4,6 +4,7 @@ html
     //- link(rel="stylesheet", href="https://fonts.googleapis.com/icon?family=Material+Icons")
     link(rel="stylesheet", href="https://code.getmdl.io/1.1.2/material.blue_grey-orange.min.css")
     // STYLES
+    link(rel="stylesheet", href="/styles/components/general.css")
     link(rel="stylesheet", href="/styles/importer.css")
     // STYLES END
 
