[ADDED] label options for input.

--- a/assets/templates/pages/home.handlebars
+++ b/assets/templates/pages/home.handlebars
@@ -1,6 +1,10 @@
-<h2>
-  Home
-</h2>
+<div class='mdl-grid'>
+  <div class='mdl-cell mdl-cell--12-col'>
+    <h2>
+      Home
+    </h2>
+  </div>
+</div>
 <div class='mdl-grid'>
   <div class='mdl-cell mdl-cell--3-col'>
     {{view 'components/card/main' data=components.text}}
