--- a/assets/templates/pages/buttons.handlebars
+++ b/assets/templates/pages/buttons.handlebars
@@ -1,6 +1,10 @@
-<h2>
-  Buttons
-</h2>
+<div class='mdl-grid'>
+  <div class='mdl-cell mdl-cell--12-col'>
+    <h2>
+      Buttons
+    </h2>
+  </div>
+</div>
 <div class='mdl-grid'>
   <div class='mdl-cell mdl-cell--2-col'>
     {{view 'components/button/main' data=components.one}}
