--- a/assets/templates/pages/text.handlebars
+++ b/assets/templates/pages/text.handlebars
@@ -1,6 +1,10 @@
-<h2>
-  Text Input
-</h2>
+<div class='mdl-grid'>
+  <div class='mdl-cell mdl-cell--12-col'>
+    <h2>
+      Text Input
+    </h2>
+  </div>
+</div>
 <div class='mdl-grid'>
   <div class='mdl-cell mdl-cell--3-col'>
     <div>Standard input with floating label</div>
