[CHANGED] input done except clear button
Also added more icons

--- a/assets/templates/pages/text.handlebars
+++ b/assets/templates/pages/text.handlebars
@@ -41,3 +41,11 @@
     {{view 'components/text/input' data=components.pattern}}
   </div>
 </div>
+<div class='mdl-grid'>
+  <div class='mdl-cell mdl-cell--3-col'>
+    {{view 'components/text/input' data=components.icon}}
+  </div>
+  <div class='mdl-cell mdl-cell--3-col'>
+    {{view 'components/text/input' data=components.email}}
+  </div>
+</div>
