--- a/views/index.jade
+++ b/views/index.jade
@@ -21,11 +21,14 @@ html
     link(rel="import", href="/vendor/paper-button/paper-button.html")
     link(rel="import", href="/vendor/paper-input/paper-input.html")
     link(rel="import", href="/vendor/iron-icons/iron-icons.html")
+    link(rel="import", href="/vendor/iron-icons/editor-icons.html")
+    link(rel="import", href="/vendor/iron-icons/communication-icons.html")
     link(rel="import", href="/vendor/iron-icon/iron-icon.html")
     
     // TEMPLATES
     script(type="text/javascript", src="/templates/components/button/main.js")
     script(type="text/javascript", src="/templates/components/card/main.js")
+    script(type="text/javascript", src="/templates/components/text/input.js")
     script(type="text/javascript", src="/templates/pages/buttons.js")
     script(type="text/javascript", src="/templates/pages/home.js")
     script(type="text/javascript", src="/templates/pages/text.js")
