[ADDED] Icon button and disabled for buttons

--- a/assets/templates/pages/buttons.handlebars
+++ b/assets/templates/pages/buttons.handlebars
@@ -10,3 +10,8 @@
     {{view 'components/button/main' data=components.one}}
   </div>
 </div>
+<div class='mdl-grid'>
+  <div class='mdl-cell mdl-cell--1-col'>
+    {{view 'components/button/icon' data=components.icon}}
+  </div>
+</div>
