--- a/views/index.jade
+++ b/views/index.jade
@@ -19,6 +19,7 @@ html
     link(rel="import", href="/vendor/polymer/polymer.html")
     link(rel="import", href="/vendor/paper-card/paper-card.html")
     link(rel="import", href="/vendor/paper-button/paper-button.html")
+    link(rel="import", href="/vendor/paper-icon-button/paper-icon-button.html")
     link(rel="import", href="/vendor/paper-input/paper-input.html")
     link(rel="import", href="/vendor/iron-icons/iron-icons.html")
     link(rel="import", href="/vendor/iron-icons/editor-icons.html")
@@ -26,6 +27,7 @@ html
     link(rel="import", href="/vendor/iron-icon/iron-icon.html")
     
     // TEMPLATES
+    script(type="text/javascript", src="/templates/components/button/icon.js")
     script(type="text/javascript", src="/templates/components/button/main.js")
     script(type="text/javascript", src="/templates/components/card/main.js")
     script(type="text/javascript", src="/templates/components/text/input.js")
@@ -44,6 +46,7 @@ html
     script(src="/js/libs/view.js")
     script(src="/js/application/application.js")
     script(src="/js/application/init.js")
+    script(src="/js/application/components/button/icon.js")
     script(src="/js/application/components/button/main.js")
     script(src="/js/application/components/card/main.js")
     script(src="/js/application/components/text/input.js")
