--- a/assets/templates/components/text/input.handlebars
+++ b/assets/templates/components/text/input.handlebars
@@ -1,4 +1,4 @@
-<paper-input {{{display.attrs}}}>
+<paper-input {{{display.attrs}}} class="{{display.extra_classes}}" {{{display.extra_attrs}}}>
   {{#if data.icon_prefix}}
   <iron-icon icon="{{data.icon_prefix}}" prefix>
   </iron-icon>
