[ADDED] icon button for input
Changed paper icon button

--- a/assets/templates/components/text/input.handlebars
+++ b/assets/templates/components/text/input.handlebars
@@ -13,6 +13,7 @@
   </iron-icon>
   {{/if}}
   {{#if data.icon_button}}
-  {{view 'components/input/icon' data=components.icon_button}}
+  party
+  {{view 'components/button/icon' data=components.icon_button}}
   {{/if}}
 </paper-input>
