--- a/views/index.jade
+++ b/views/index.jade
@@ -4,6 +4,7 @@ html
     //- link(rel="stylesheet", href="https://fonts.googleapis.com/icon?family=Material+Icons")
     link(rel="stylesheet", href="https://code.getmdl.io/1.1.2/material.blue_grey-orange.min.css")
     // STYLES
+    link(rel="stylesheet", href="/styles/components/button/icon.css")
     link(rel="stylesheet", href="/styles/components/general.css")
     link(rel="stylesheet", href="/styles/importer.css")
     // STYLES END
@@ -27,7 +28,6 @@ html
     link(rel="import", href="/vendor/iron-icon/iron-icon.html")
     
     // TEMPLATES
-    script(type="text/javascript", src="/templates/components/button/icon.js")
     script(type="text/javascript", src="/templates/components/button/main.js")
     script(type="text/javascript", src="/templates/components/card/main.js")
     script(type="text/javascript", src="/templates/components/text/input.js")
