--- a/assets/templates/pages/text.handlebars
+++ b/assets/templates/pages/text.handlebars
@@ -48,4 +48,7 @@
   <div class='mdl-cell mdl-cell--3-col'>
     {{view 'components/text/input' data=components.email}}
   </div>
+  <div class='mdl-cell mdl-cell--3-col'>
+    {{view 'components/text/input' data=components.clear}}
+  </div>
 </div>
