--- a/views/500.jade
+++ b/views/500.jade
@@ -3,6 +3,7 @@ html
   head
     link(rel="stylesheet", href="https://fonts.googleapis.com/icon?family=Material+Icons")
     // STYLES
+    link(rel="stylesheet", href="/styles/components/button/icon.css")
     link(rel="stylesheet", href="/styles/components/general.css")
     link(rel="stylesheet", href="/styles/importer.css")
     // STYLES END
