--- a/assets/templates/pages/text.handlebars
+++ b/assets/templates/pages/text.handlebars
@@ -52,3 +52,11 @@
     {{view 'components/text/input' data=components.clear}}
   </div>
 </div>
+<div class='mdl-grid'>
+  <div class='mdl-cell mdl-cell--3-col'>
+    {{view 'components/text/area' data=components.textarea}}
+  </div>
+  <div class='mdl-cell mdl-cell--3-col'>
+    {{view 'components/text/area' data=components.info}}
+  </div>
+</div>
