--- a/views/index.jade
+++ b/views/index.jade
@@ -22,6 +22,7 @@ html
     link(rel="import", href="/vendor/paper-button/paper-button.html")
     link(rel="import", href="/vendor/paper-icon-button/paper-icon-button.html")
     link(rel="import", href="/vendor/paper-input/paper-input.html")
+    link(rel="import", href="/vendor/paper-input/paper-textarea.html")
     link(rel="import", href="/vendor/iron-icons/iron-icons.html")
     link(rel="import", href="/vendor/iron-icons/editor-icons.html")
     link(rel="import", href="/vendor/iron-icons/communication-icons.html")
@@ -30,6 +31,7 @@ html
     // TEMPLATES
     script(type="text/javascript", src="/templates/components/button/main.js")
     script(type="text/javascript", src="/templates/components/card/main.js")
+    script(type="text/javascript", src="/templates/components/text/area.js")
     script(type="text/javascript", src="/templates/components/text/input.js")
     script(type="text/javascript", src="/templates/pages/buttons.js")
     script(type="text/javascript", src="/templates/pages/home.js")
@@ -49,6 +51,7 @@ html
     script(src="/js/application/components/button/icon.js")
     script(src="/js/application/components/button/main.js")
     script(src="/js/application/components/card/main.js")
+    script(src="/js/application/components/text/area.js")
     script(src="/js/application/components/text/input.js")
     script(src="/js/application/pages/buttons.js")
     script(src="/js/application/pages/home.js")
