--- a/assets/styles/components/button/icon.scss
+++ b/assets/styles/components/button/icon.scss
@@ -1,5 +1,7 @@
-paper-icon-button.text_input_suffix {
-  height: 24px;
-  width: 24px;
-  padding: 0;
+paper-icon-button{
+  .text_input_suffix {
+    height: 24px;
+    width: 24px;
+    padding: 0;
+  }  
 }
