--- a/assets/templates/pages/home.handlebars
+++ b/assets/templates/pages/home.handlebars
@@ -9,4 +9,7 @@
   <div class='mdl-cell mdl-cell--3-col'>
     {{view 'components/card/main' data=components.text}}
   </div>
+  <div class='mdl-cell mdl-cell--3-col'>
+    {{view 'components/card/main' data=components.buttons}}
+  </div>
 </div>
