--- a/views/404.jade
+++ b/views/404.jade
@@ -4,6 +4,7 @@ html
     link(rel="stylesheet", href="https://fonts.googleapis.com/icon?family=Material+Icons")
     // STYLES
     link(rel="stylesheet", href="/styles/components/button/icon.css")
+    link(rel="stylesheet", href="/styles/components/card/main.css")
     link(rel="stylesheet", href="/styles/components/general.css")
     link(rel="stylesheet", href="/styles/importer.css")
     // STYLES END
