--- a/assets/templates/pages/buttons.handlebars
+++ b/assets/templates/pages/buttons.handlebars
@@ -6,12 +6,39 @@
   </div>
 </div>
 <div class='mdl-grid'>
-  <div class='mdl-cell mdl-cell--2-col'>
-    {{view 'components/button/main' data=components.one}}
+  <div class='mdl-cell mdl-cell--1-col'>
+    {{view 'components/button/main' data=components.flat}}
+  </div>
+  <div class='mdl-cell mdl-cell--1-col'>
+    {{view 'components/button/main' data=components.flat_primary}}
+  </div>
+  <div class='mdl-cell mdl-cell--1-col'>
+    {{view 'components/button/main' data=components.flat_accent}}
+  </div>
+  <div class='mdl-cell mdl-cell--1-col'>
+    {{view 'components/button/main' data=components.button}}
+  </div>
+  <div class='mdl-cell mdl-cell--1-col'>
+    {{view 'components/button/main' data=components.primary}}
+  </div>
+  <div class='mdl-cell mdl-cell--1-col'>
+    {{view 'components/button/main' data=components.accent}}
+  </div>
+  <div class='mdl-cell mdl-cell--1-col'>
+    {{view 'components/button/main' data=components.disabled}}
   </div>
 </div>
 <div class='mdl-grid'>
   <div class='mdl-cell mdl-cell--1-col'>
     {{view 'components/button/icon' data=components.icon}}
+  </div>
+  <div class='mdl-cell mdl-cell--1-col'>
+    {{view 'components/button/icon' data=components.icon_primary}}
+  </div>
+  <div class='mdl-cell mdl-cell--1-col'>
+    {{view 'components/button/icon' data=components.icon_accent}}
+  </div>
+  <div class='mdl-cell mdl-cell--1-col'>
+    {{view 'components/button/icon' data=components.icon_disabled}}
   </div>
 </div>
