[ADDED] icon attributes, id, paper badge element

--- a/views/index.jade
+++ b/views/index.jade
@@ -30,6 +30,7 @@ html
     link(rel="import", href="/vendor/iron-icons/notification-icons.html")
     link(rel="import", href="/vendor/iron-icons/places-icons.html")
     link(rel="import", href="/vendor/iron-icons/social-icons.html")
+    link(rel="import", href="/vendor/paper-badge/paper-badge.html")
     
     // TEMPLATES
     script(type="text/javascript", src="/templates/components/button/main.js")
