{ADDED] Toggle switches card to home

--- a/assets/templates/pages/home.handlebars
+++ b/assets/templates/pages/home.handlebars
@@ -12,4 +12,7 @@
   <div class='mdl-cell mdl-cell--3-col'>
     {{view 'components/card/main' data=components.buttons}}
   </div>
+  <div class='mdl-cell mdl-cell--3-col'>
+    {{view 'components/card/main' data=components.toggles}}
+  </div>
 </div>
