--- a/views/index.jade
+++ b/views/index.jade
@@ -40,6 +40,7 @@ html
     script(type="text/javascript", src="/templates/pages/buttons.js")
     script(type="text/javascript", src="/templates/pages/home.js")
     script(type="text/javascript", src="/templates/pages/text.js")
+    script(type="text/javascript", src="/templates/pages/toggles.js")
     script(type="text/javascript", src="/templates/views/home/card/footer.js")
     // TEMPLATES END
 
@@ -59,6 +60,7 @@ html
     script(src="/js/application/pages/buttons.js")
     script(src="/js/application/pages/home.js")
     script(src="/js/application/pages/text.js")
+    script(src="/js/application/pages/toggles.js")
     script(src="/js/application/views/home/card/footer.js")
     // SCRIPTS END
   body
