--- a/views/index.jade
+++ b/views/index.jade
@@ -4,6 +4,7 @@ html
     //- link(rel="stylesheet", href="https://fonts.googleapis.com/icon?family=Material+Icons")
     link(rel="stylesheet", href="https://code.getmdl.io/1.1.2/material.blue_grey-orange.min.css")
     // STYLES
+    link(rel="stylesheet", href="/styles/application.css")
     link(rel="stylesheet", href="/styles/components/button/icon.css")
     link(rel="stylesheet", href="/styles/components/card/main.css")
     link(rel="stylesheet", href="/styles/components/general.css")
@@ -19,6 +20,9 @@ html
     script(src="/js/dependencies/sails.io.js")
     // END DEPENDENCIES
     link(rel="import", href="/vendor/polymer/polymer.html")
+    //- link(rel="import", href="/vendor/paper-header-panel/paper-header-panel.html")
+    link(rel="import", href="/vendor/paper-scroll-header-panel/paper-scroll-header-panel.html")
+    link(rel="import", href="/vendor/paper-toolbar/paper-toolbar.html")
     link(rel="import", href="/vendor/iron-icon/iron-icon.html")
     link(rel="import", href="/vendor/iron-icons/communication-icons.html")
     link(rel="import", href="/vendor/iron-icons/device-icons.html")
@@ -31,6 +35,8 @@ html
     link(rel="import", href="/vendor/iron-icons/places-icons.html")
     link(rel="import", href="/vendor/iron-icons/social-icons.html")
     link(rel="import", href="/vendor/paper-badge/paper-badge.html")
+    link(rel="import", href="/vendor/iron-flex-layout/iron-flex-layout.html")
+    link(rel="import", href="/vendor/iron-flex-layout/iron-flex-layout-classes.html")
     
     // TEMPLATES
     script(type="text/javascript", src="/templates/components/button/main.js")
@@ -64,7 +70,14 @@ html
     script(src="/js/application/views/home/card/footer.js")
     // SCRIPTS END
   body
-    #main-content(page-name='#{page}')
+    paper-scroll-header-panel(style="height: 100%;", condenses)
+      paper-toolbar.tall
+        .toolbar-tools.paper-toolbar.top
+        .toolbar-tools.paper-toolbar.bottom
+          .title Polymer Examples
+      .content
+        #main-content(page-name='#{page}', style='height: 2000px')
     
     script.
       App.setPage();
+      
