--- a/assets/styles/application.scss
+++ b/assets/styles/application.scss
@@ -12,13 +12,13 @@ body {
           }
         }
       }
-    }
-    #headerBg.paper-scroll-header-panel {
-      background-image: url('../images/oldchicagomid.jpg');
-      background-position: center bottom !important;
-    }
-    #condensedHeaderBg.paper-scroll-header-panel {
-      background: rgb(96,125,139);
+      #headerBg.paper-scroll-header-panel {
+        background: linear-gradient(rgba(96,125,139,0.6), rgba(96,125,139,0.6)), url('../images/oldchicagomid.jpg');
+        background-position: center bottom !important;
+      }
+      #condensedHeaderBg.paper-scroll-header-panel {
+        background: rgb(96,125,139);
+      }
     }
   }
 }
