[ADDED] style in stylesheet

--- a/views/index.jade
+++ b/views/index.jade
@@ -70,7 +70,7 @@ html
     script(src="/js/application/views/home/card/footer.js")
     // SCRIPTS END
   body
-    paper-scroll-header-panel(style="height: 100%;", condenses)
+    paper-scroll-header-panel(condenses)
       paper-toolbar.tall
         .toolbar-tools.paper-toolbar.top
         .toolbar-tools.paper-toolbar.bottom
