--- a/assets/styles/application.scss
+++ b/assets/styles/application.scss
@@ -2,6 +2,7 @@ body {
   height: 100%;
 
   paper-scroll-header-panel {
+    height: 100%;
     #headerContainer {
       paper-toolbar {
         background: transparent;
