--- a/views/index.jade
+++ b/views/index.jade
@@ -1,7 +1,6 @@
 doctype html
 html
   head
-    //- link(rel="stylesheet", href="https://fonts.googleapis.com/icon?family=Material+Icons")
     link(rel="stylesheet", href="https://code.getmdl.io/1.1.2/material.blue_grey-orange.min.css")
     // STYLES
     link(rel="stylesheet", href="/styles/application.css")
@@ -19,24 +18,6 @@ html
     script(src="/js/dependencies/core/webcomponentsjs/webcomponents.js")
     script(src="/js/dependencies/sails.io.js")
     // END DEPENDENCIES
-    link(rel="import", href="/vendor/polymer/polymer.html")
-    //- link(rel="import", href="/vendor/paper-header-panel/paper-header-panel.html")
-    link(rel="import", href="/vendor/paper-scroll-header-panel/paper-scroll-header-panel.html")
-    link(rel="import", href="/vendor/paper-toolbar/paper-toolbar.html")
-    link(rel="import", href="/vendor/iron-icon/iron-icon.html")
-    link(rel="import", href="/vendor/iron-icons/communication-icons.html")
-    link(rel="import", href="/vendor/iron-icons/device-icons.html")
-    link(rel="import", href="/vendor/iron-icons/editor-icons.html")
-    link(rel="import", href="/vendor/iron-icons/hardware-icons.html")
-    link(rel="import", href="/vendor/iron-icons/image-icons.html")
-    link(rel="import", href="/vendor/iron-icons/iron-icons.html")
-    link(rel="import", href="/vendor/iron-icons/maps-icons.html")
-    link(rel="import", href="/vendor/iron-icons/notification-icons.html")
-    link(rel="import", href="/vendor/iron-icons/places-icons.html")
-    link(rel="import", href="/vendor/iron-icons/social-icons.html")
-    link(rel="import", href="/vendor/paper-badge/paper-badge.html")
-    link(rel="import", href="/vendor/iron-flex-layout/iron-flex-layout.html")
-    link(rel="import", href="/vendor/iron-flex-layout/iron-flex-layout-classes.html")
     
     // TEMPLATES
     script(type="text/javascript", src="/templates/components/button/main.js")
@@ -69,6 +50,26 @@ html
     script(src="/js/application/pages/toggles.js")
     script(src="/js/application/views/home/card/footer.js")
     // SCRIPTS END
+    
+    // WEB COMPONENTS
+    link(rel="import", href="/vendor/polymer/polymer.html")
+    link(rel="import", href="/vendor/paper-scroll-header-panel/paper-scroll-header-panel.html")
+    link(rel="import", href="/vendor/paper-toolbar/paper-toolbar.html")
+    link(rel="import", href="/vendor/iron-icon/iron-icon.html")
+    link(rel="import", href="/vendor/iron-icons/communication-icons.html")
+    link(rel="import", href="/vendor/iron-icons/device-icons.html")
+    link(rel="import", href="/vendor/iron-icons/editor-icons.html")
+    link(rel="import", href="/vendor/iron-icons/hardware-icons.html")
+    link(rel="import", href="/vendor/iron-icons/image-icons.html")
+    link(rel="import", href="/vendor/iron-icons/iron-icons.html")
+    link(rel="import", href="/vendor/iron-icons/maps-icons.html")
+    link(rel="import", href="/vendor/iron-icons/notification-icons.html")
+    link(rel="import", href="/vendor/iron-icons/places-icons.html")
+    link(rel="import", href="/vendor/iron-icons/social-icons.html")
+    link(rel="import", href="/vendor/paper-badge/paper-badge.html")
+    link(rel="import", href="/vendor/iron-flex-layout/iron-flex-layout.html")
+    link(rel="import", href="/vendor/iron-flex-layout/iron-flex-layout-classes.html")
+    // WEB COMPONENTS END
   body
     paper-scroll-header-panel(condenses)
       paper-toolbar.tall
