[ADDED] paper checkbox. fixed icon disabled bug

--- a/assets/templates/pages/toggles.handlebars
+++ b/assets/templates/pages/toggles.handlebars
@@ -7,6 +7,9 @@
 </div>
 <div class='mdl-grid'>
   <div class='mdl-cell mdl-cell--1-col'>
-
+    {{view 'components/toggles/checkbox' data=components.standard}}
+  </div>
+  <div class='mdl-cell mdl-cell--1-col'>
+    {{view 'components/toggles/checkbox' data=components.disabled}}
   </div>
 </div>
