--- a/views/index.jade
+++ b/views/index.jade
@@ -24,6 +24,7 @@ html
     script(type="text/javascript", src="/templates/components/card/main.js")
     script(type="text/javascript", src="/templates/components/text/area.js")
     script(type="text/javascript", src="/templates/components/text/input.js")
+    script(type="text/javascript", src="/templates/components/toggles/checkbox.js")
     script(type="text/javascript", src="/templates/pages/buttons.js")
     script(type="text/javascript", src="/templates/pages/home.js")
     script(type="text/javascript", src="/templates/pages/text.js")
@@ -44,6 +45,7 @@ html
     script(src="/js/application/components/card/main.js")
     script(src="/js/application/components/text/area.js")
     script(src="/js/application/components/text/input.js")
+    script(src="/js/application/components/toggles/checkbox.js")
     script(src="/js/application/pages/buttons.js")
     script(src="/js/application/pages/home.js")
     script(src="/js/application/pages/text.js")
