[ADDED} Paper fab button

--- a/assets/templates/pages/buttons.handlebars
+++ b/assets/templates/pages/buttons.handlebars
@@ -6,6 +6,13 @@
   </div>
 </div>
 <div class='mdl-grid'>
+  <div class='mdl-cell mdl-cell--12-col'>
+    <h4>
+      Standard
+    </h4>
+  </div>
+</div>
+<div class='mdl-grid'>
   <div class='mdl-cell mdl-cell--1-col'>
     {{view 'components/button/main' data=components.flat}}
   </div>
@@ -29,6 +36,13 @@
   </div>
 </div>
 <div class='mdl-grid'>
+  <div class='mdl-cell mdl-cell--12-col'>
+    <h4>
+      Icon
+    </h4>
+  </div>
+</div>
+<div class='mdl-grid'>
   <div class='mdl-cell mdl-cell--1-col'>
     {{view 'components/button/icon' data=components.icon}}
   </div>
@@ -40,5 +54,26 @@
   </div>
   <div class='mdl-cell mdl-cell--1-col'>
     {{view 'components/button/icon' data=components.icon_disabled}}
+  </div>
+</div>
+<div class='mdl-grid'>
+  <div class='mdl-cell mdl-cell--12-col'>
+    <h4>
+      Fab
+    </h4>
+  </div>
+</div>
+<div class='mdl-grid'>
+  <div class='mdl-cell mdl-cell--1-col'>
+    {{view 'components/button/fab' data=components.fab}}
+  </div>
+  <div class='mdl-cell mdl-cell--1-col'>
+    {{view 'components/button/fab' data=components.fab_primary}}
+  </div>
+  <div class='mdl-cell mdl-cell--1-col'>
+    {{view 'components/button/fab' data=components.fab_accent}}
+  </div>
+  <div class='mdl-cell mdl-cell--1-col'>
+    {{view 'components/button/fab' data=components.fab_disabled}}
   </div>
 </div>
