--- a/views/index.jade
+++ b/views/index.jade
@@ -40,6 +40,7 @@ html
     script(src="/js/libs/view.js")
     script(src="/js/application/application.js")
     script(src="/js/application/init.js")
+    script(src="/js/application/components/button/fab.js")
     script(src="/js/application/components/button/icon.js")
     script(src="/js/application/components/button/main.js")
     script(src="/js/application/components/card/main.js")
