--- a/assets/styles/application.scss
+++ b/assets/styles/application.scss
@@ -10,6 +10,7 @@ body {
         .toolbar-tools {
           .title {
             font-size: 40px;
+            cursor: pointer;
           }
         }
       }
