--- a/views/index.jade
+++ b/views/index.jade
@@ -25,6 +25,8 @@ html
     script(type="text/javascript", src="/templates/components/text/area.js")
     script(type="text/javascript", src="/templates/components/text/input.js")
     script(type="text/javascript", src="/templates/components/toggles/checkbox.js")
+    script(type="text/javascript", src="/templates/layouts/header.js")
+    script(type="text/javascript", src="/templates/layouts/main.js")
     script(type="text/javascript", src="/templates/pages/buttons.js")
     script(type="text/javascript", src="/templates/pages/home.js")
     script(type="text/javascript", src="/templates/pages/text.js")
@@ -47,6 +49,8 @@ html
     script(src="/js/application/components/text/area.js")
     script(src="/js/application/components/text/input.js")
     script(src="/js/application/components/toggles/checkbox.js")
+    script(src="/js/application/layouts/header.js")
+    script(src="/js/application/layouts/main.js")
     script(src="/js/application/pages/buttons.js")
     script(src="/js/application/pages/home.js")
     script(src="/js/application/pages/text.js")
@@ -74,13 +78,7 @@ html
     link(rel="import", href="/vendor/iron-flex-layout/iron-flex-layout-classes.html")
     // WEB COMPONENTS END
   body
-    paper-scroll-header-panel(condenses)
-      paper-toolbar.tall
-        .toolbar-tools.paper-toolbar.top
-        .toolbar-tools.paper-toolbar.bottom
-          .title Polymer Examples
-      .content
-        #main-content(page-name='#{page}', style='height: 2000px')
+    #main-content(page-name='#{page}',style='height: 100%')
     
     script.
       App.setPage();
