[ADDED] home link on title

--- a/assets/templates/layouts/main.handlebars
+++ b/assets/templates/layouts/main.handlebars
@@ -1,7 +1,9 @@
 <paper-scroll-header-panel condenses>
   <paper-toolbar class='tall'>
     <div class='toolbar-tools paper-toolbar top'>
-
+      <span class='link' route='/elements/buttons'>
+        Buttons
+      </span>
     </div>
     <div class='toolbar-tools paper-toolbar bottom'>
       <div id='title' class='title'>
