--- a/assets/styles/application.scss
+++ b/assets/styles/application.scss
@@ -11,6 +11,7 @@ body {
           .title {
             font-size: 40px;
             cursor: pointer;
+            pointer-events: all;
           }
         }
       }
