[ADDED] Paper drawer

--- a/assets/templates/layouts/main.handlebars
+++ b/assets/templates/layouts/main.handlebars
@@ -1,17 +1,17 @@
-<paper-scroll-header-panel condenses>
-  <paper-toolbar class='tall'>
-    <div class='toolbar-tools paper-toolbar top'>
-      <span class='link' route='/elements/buttons'>
-        Buttons
-      </span>
-    </div>
-    <div class='toolbar-tools paper-toolbar bottom'>
-      <div id='title' class='title'>
+<paper-drawer-panel force-narrow drawer-width='320px'>
+  <div drawer>
+    <div> Test </div>
+  </div>
+  <paper-scroll-header-panel condenses main>
+    <paper-toolbar class='tall'>
+      {{view 'components/button/icon' data=components.menu}}
+      <div id='title' class='title bottom'>
         Polymer Examples
       </div>
+      </div>
+    </paper-toolbar>
+    <div id="page-content" style="height: 2000px">
+      {{page data.page}}
     </div>
-  </paper-toolbar>
-  <div id="page-content" style="height: 2000px">
-    {{page data.page}}
-  </div>
-</paper-scroll-header-panel>
+  </paper-scroll-header-panel>
+</paper-drawer-panel>
