[ADDED] Test page

--- a/views/index.jade
+++ b/views/index.jade
@@ -28,6 +28,7 @@ html
     script(type="text/javascript", src="/templates/layouts/main.js")
     script(type="text/javascript", src="/templates/pages/buttons.js")
     script(type="text/javascript", src="/templates/pages/home.js")
+    script(type="text/javascript", src="/templates/pages/test.js")
     script(type="text/javascript", src="/templates/pages/text.js")
     script(type="text/javascript", src="/templates/pages/toggles.js")
     script(type="text/javascript", src="/templates/views/home/card/footer.js")
@@ -51,6 +52,7 @@ html
     script(src="/js/application/layouts/main.js")
     script(src="/js/application/pages/buttons.js")
     script(src="/js/application/pages/home.js")
+    script(src="/js/application/pages/test.js")
     script(src="/js/application/pages/text.js")
     script(src="/js/application/pages/toggles.js")
     script(src="/js/application/views/home/card/footer.js")
