--- a/assets/templates/pages/home.handlebars
+++ b/assets/templates/pages/home.handlebars
@@ -9,3 +9,8 @@
     {{view 'components/card/main' data=components.toggles}}
   </div>
 </div>
+<div class='mdl-grid'>
+  <div class='mdl-cell mdl-cell--4-col mdl-cell--8-col-tablet mdl-cell--4-col-phone'>
+    {{view 'components/card/main' data=components.test}}
+  </div>
+</div>
