[ADDED] Paper tooltips. Showing on test page with badge

--- a/views/index.jade
+++ b/views/index.jade
@@ -36,6 +36,7 @@ html
 
     // SCRIPTS
     script(src="/vendor/moment/moment.js")
+    script(src="/vendor/web-animations-js/web-animations.min.js")
     script(src="/js/libs/collection.js")
     script(src="/js/libs/handlebars_helpers.js")
     script(src="/js/libs/model.js")
