[ADDED] Radio button

--- a/assets/templates/pages/toggles.handlebars
+++ b/assets/templates/pages/toggles.handlebars
@@ -7,9 +7,15 @@
 </div>
 <div class='mdl-grid'>
   <div class='mdl-cell mdl-cell--1-col'>
-    {{view 'components/toggles/checkbox' data=components.standard}}
+    {{view 'components/toggles/checkbox' data=components.checkbox}}
   </div>
   <div class='mdl-cell mdl-cell--1-col'>
-    {{view 'components/toggles/checkbox' data=components.disabled}}
+    {{view 'components/toggles/checkbox' data=components.checkbox_disabled}}
+  </div>
+  <div class='mdl-cell mdl-cell--1-col'>
+    {{view 'components/toggles/radio' data=components.radio}}
+  </div>
+  <div class='mdl-cell mdl-cell--1-col'>
+    {{view 'components/toggles/radio' data=components.radio_disabled}}
   </div>
 </div>
