--- a/views/index.jade
+++ b/views/index.jade
@@ -25,6 +25,7 @@ html
     script(type="text/javascript", src="/templates/components/text/area.js")
     script(type="text/javascript", src="/templates/components/text/input.js")
     script(type="text/javascript", src="/templates/components/toggles/checkbox.js")
+    script(type="text/javascript", src="/templates/components/toggles/radio.js")
     script(type="text/javascript", src="/templates/layouts/main.js")
     script(type="text/javascript", src="/templates/pages/buttons.js")
     script(type="text/javascript", src="/templates/pages/home.js")
@@ -50,6 +51,7 @@ html
     script(src="/js/application/components/text/area.js")
     script(src="/js/application/components/text/input.js")
     script(src="/js/application/components/toggles/checkbox.js")
+    script(src="/js/application/components/toggles/radio.js")
     script(src="/js/application/layouts/main.js")
     script(src="/js/application/pages/buttons.js")
     script(src="/js/application/pages/home.js")
