[ADDED} Functionality for radio group

--- a/assets/templates/pages/toggles.handlebars
+++ b/assets/templates/pages/toggles.handlebars
@@ -19,3 +19,24 @@
     {{view 'components/toggles/radio' data=components.radio_disabled}}
   </div>
 </div>
+<div class='mdl-grid'>
+  <div class='mdl-cell mdl-cell--12-col'>
+    <h4>
+      Radio Group
+    </h4>
+  </div>
+</div>
+<div class='mdl-grid'>
+  <div class='mdl-cell mdl-cell--1-col'>
+    {{view 'components/toggles/radio' data=components.radio_first}}
+  </div>
+  <div class='mdl-cell mdl-cell--1-col'>
+    {{view 'components/toggles/radio' data=components.radio_second}}
+  </div>
+  <div class='mdl-cell mdl-cell--1-col'>
+    {{view 'components/toggles/radio' data=components.radio_third}}
+  </div>
+  <div class='mdl-cell mdl-cell--1-col'>
+    {{view 'components/toggles/radio' data=components.radio_fourth}}
+  </div>
+</div>
