[ADDED] Paper toggle button

--- a/assets/templates/pages/toggles.handlebars
+++ b/assets/templates/pages/toggles.handlebars
@@ -18,6 +18,12 @@
   <div class='mdl-cell mdl-cell--1-col'>
     {{view 'components/toggles/radio' data=components.radio_disabled}}
   </div>
+  <div class='mdl-cell mdl-cell--1-col'>
+    {{view 'components/toggles/switch' data=components.switch}}
+  </div>
+  <div class='mdl-cell mdl-cell--1-col'>
+    {{view 'components/toggles/switch' data=components.switch_disabled}}
+  </div>
 </div>
 <div class='mdl-grid'>
   <div class='mdl-cell mdl-cell--12-col'>
