--- a/views/index.jade
+++ b/views/index.jade
@@ -26,6 +26,7 @@ html
     script(type="text/javascript", src="/templates/components/text/input.js")
     script(type="text/javascript", src="/templates/components/toggles/checkbox.js")
     script(type="text/javascript", src="/templates/components/toggles/radio.js")
+    script(type="text/javascript", src="/templates/components/toggles/switch.js")
     script(type="text/javascript", src="/templates/layouts/main.js")
     script(type="text/javascript", src="/templates/pages/buttons.js")
     script(type="text/javascript", src="/templates/pages/home.js")
@@ -52,6 +53,7 @@ html
     script(src="/js/application/components/text/input.js")
     script(src="/js/application/components/toggles/checkbox.js")
     script(src="/js/application/components/toggles/radio.js")
+    script(src="/js/application/components/toggles/switch.js")
     script(src="/js/application/layouts/main.js")
     script(src="/js/application/pages/buttons.js")
     script(src="/js/application/pages/home.js")
