[ADDED] id in attributes model.

--- a/assets/templates/components/button/main.handlebars
+++ b/assets/templates/components/button/main.handlebars
@@ -1,4 +1,4 @@
-<paper-button class="{{display.classes}} {{display.extra_classes}}" {{{display.attrs}}} {{{display.extra_attrs}}}>
+<paper-button class="{{display.classes}}" {{{display.attrs}}} id='{{display.id}}'>
   {{#if display.icon}}
   <iron-icon icon="{{display.icon}}">
   </iron-icon>
