--- a/assets/templates/components/text/area.handlebars
+++ b/assets/templates/components/text/area.handlebars
@@ -1,2 +1,2 @@
-<paper-textarea {{{display.attrs}}} class="{{display.extra_classes}}" {{{display.extra_attrs}}}>
+<paper-textarea {{{display.attrs}}} class="{{display.classes}}" id='{{display.id}}'>
 </paper-textarea>
