--- a/assets/templates/pages/home.handlebars
+++ b/assets/templates/pages/home.handlebars
@@ -11,6 +11,9 @@
 </div>
 <div class='mdl-grid'>
   <div class='mdl-cell mdl-cell--4-col mdl-cell--8-col-tablet mdl-cell--4-col-phone'>
+    {{view 'components/card/main' data=components.selection}}
+  </div>
+  <div class='mdl-cell mdl-cell--4-col mdl-cell--8-col-tablet mdl-cell--4-col-phone'>
     {{view 'components/card/main' data=components.test}}
   </div>
 </div>
