--- a/views/index.jade
+++ b/views/index.jade
@@ -22,6 +22,7 @@ html
     // TEMPLATES
     script(type="text/javascript", src="/templates/components/button/main.js")
     script(type="text/javascript", src="/templates/components/card/main.js")
+    script(type="text/javascript", src="/templates/components/general/item.js")
     script(type="text/javascript", src="/templates/components/text/area.js")
     script(type="text/javascript", src="/templates/components/text/input.js")
     script(type="text/javascript", src="/templates/components/toggles/checkbox.js")
@@ -30,6 +31,7 @@ html
     script(type="text/javascript", src="/templates/layouts/main.js")
     script(type="text/javascript", src="/templates/pages/buttons.js")
     script(type="text/javascript", src="/templates/pages/home.js")
+    script(type="text/javascript", src="/templates/pages/selection.js")
     script(type="text/javascript", src="/templates/pages/test.js")
     script(type="text/javascript", src="/templates/pages/text.js")
     script(type="text/javascript", src="/templates/pages/toggles.js")
@@ -49,6 +51,7 @@ html
     script(src="/js/application/components/button/icon.js")
     script(src="/js/application/components/button/main.js")
     script(src="/js/application/components/card/main.js")
+    script(src="/js/application/components/general/item.js")
     script(src="/js/application/components/text/area.js")
     script(src="/js/application/components/text/input.js")
     script(src="/js/application/components/toggles/checkbox.js")
@@ -57,6 +60,7 @@ html
     script(src="/js/application/layouts/main.js")
     script(src="/js/application/pages/buttons.js")
     script(src="/js/application/pages/home.js")
+    script(src="/js/application/pages/selection.js")
     script(src="/js/application/pages/test.js")
     script(src="/js/application/pages/text.js")
     script(src="/js/application/pages/toggles.js")
