--- a/assets/templates/components/toggles/radio.handlebars
+++ b/assets/templates/components/toggles/radio.handlebars
@@ -1,3 +1,3 @@
-<paper-radio-button class="{{display.classes}}" {{{display.attrs}}}>
+<paper-radio-button id="{{display.id}}" class="{{display.classes}}" {{{display.attrs}}}>
   {{display.label}}
 </paper-radio-button>
