[ADDED] Some item examples

--- a/views/index.jade
+++ b/views/index.jade
@@ -36,6 +36,8 @@ html
     script(type="text/javascript", src="/templates/pages/text.js")
     script(type="text/javascript", src="/templates/pages/toggles.js")
     script(type="text/javascript", src="/templates/views/home/card/footer.js")
+    script(type="text/javascript", src="/templates/views/selection/item/item_view_1.js")
+    script(type="text/javascript", src="/templates/views/selection/item/item_view_2.js")
     // TEMPLATES END
 
     // SCRIPTS
@@ -65,6 +67,8 @@ html
     script(src="/js/application/pages/text.js")
     script(src="/js/application/pages/toggles.js")
     script(src="/js/application/views/home/card/footer.js")
+    script(src="/js/application/views/selection/item/item_view_1.js")
+    script(src="/js/application/views/selection/item/item_view_2.js")
     // SCRIPTS END
     
     // WEB COMPONENTS
