[ADDED] Menu with basic item listing

--- a/assets/templates/components/general/item.handlebars
+++ b/assets/templates/components/general/item.handlebars
@@ -1,4 +1,4 @@
-<paper-item>
+<paper-item classes="{{display.classes}}" {{{display.attrs}}}>
   {{#if display.view}}
   {{view display.view data=display.view_data}}
   {{else}}
