--- a/assets/templates/pages/selection.handlebars
+++ b/assets/templates/pages/selection.handlebars
@@ -43,3 +43,15 @@
     </div>
   </div>
 </div>
+<div class='mdl-grid'>
+  <div class='mdl-cell mdl-cell--3-col'>
+    <h4>
+      Menu
+    </h4>
+    <div class='mdl-grid'>
+      <div class='mdl-cell mdl-cell--12-col'>
+        {{view 'components/general/menu' data=components.menu}}
+      </div>
+    </div>
+  </div>
+</div>
