--- a/views/index.jade
+++ b/views/index.jade
@@ -23,6 +23,7 @@ html
     script(type="text/javascript", src="/templates/components/button/main.js")
     script(type="text/javascript", src="/templates/components/card/main.js")
     script(type="text/javascript", src="/templates/components/general/item.js")
+    script(type="text/javascript", src="/templates/components/general/menu.js")
     script(type="text/javascript", src="/templates/components/text/area.js")
     script(type="text/javascript", src="/templates/components/text/input.js")
     script(type="text/javascript", src="/templates/components/toggles/checkbox.js")
@@ -54,6 +55,7 @@ html
     script(src="/js/application/components/button/main.js")
     script(src="/js/application/components/card/main.js")
     script(src="/js/application/components/general/item.js")
+    script(src="/js/application/components/general/menu.js")
     script(src="/js/application/components/text/area.js")
     script(src="/js/application/components/text/input.js")
     script(src="/js/application/components/toggles/checkbox.js")
