[ADDED] Menu. starting on component for polymer stuff

--- a/assets/templates/components/general/menu.handlebars
+++ b/assets/templates/components/general/menu.handlebars
@@ -1,1 +1,3 @@
-<paper-menu classes={{display.classes}} {{{display.attrs}}}>
+<paper-menu classes="{{display.classes}}" {{{display.attrs}}}>
+
+</paper-menu>
