--- a/assets/templates/pages/test.handlebars
+++ b/assets/templates/pages/test.handlebars
@@ -13,4 +13,9 @@
       View Comments!
     </paper-tooltip>
   </div>
+  <div class='mdl-cell mdl-cell--2-col'>
+    {{view 'components/text/input' data=components.input}}
+  </div>
+  <div class='mdl-cell mdl-cell--2-col' id="add_here">
+  </div>
 </div>
