--- a/views/index.jade
+++ b/views/index.jade
@@ -44,10 +44,11 @@ html
     // SCRIPTS
     script(src="/vendor/moment/moment.js")
     script(src="/vendor/web-animations-js/web-animations.min.js")
+    script(src="/js/libs/view.js")
+    script(src="/js/libs/components.js")
     script(src="/js/libs/collection.js")
     script(src="/js/libs/handlebars_helpers.js")
     script(src="/js/libs/model.js")
-    script(src="/js/libs/view.js")
     script(src="/js/application/application.js")
     script(src="/js/application/init.js")
     script(src="/js/application/components/button/fab.js")
@@ -58,6 +59,7 @@ html
     script(src="/js/application/components/general/menu.js")
     script(src="/js/application/components/text/area.js")
     script(src="/js/application/components/text/input.js")
+    script(src="/js/application/components/text/test_input.js")
     script(src="/js/application/components/toggles/checkbox.js")
     script(src="/js/application/components/toggles/radio.js")
     script(src="/js/application/components/toggles/switch.js")
