[ADDED] App Component, converted text input and area

--- a/assets/styles/components/button/icon.scss
+++ b/assets/styles/components/button/icon.scss
@@ -1,7 +1,9 @@
-paper-icon-button{
-  .text_input_suffix {
-    height: 24px;
-    width: 24px;
-    padding: 0;
-  }  
+paper-input {
+  paper-icon-button{
+    &.text_input_suffix {
+      height: 24px;
+      width: 24px;
+      padding: 0;
+    }
+  }
 }
