--- a/assets/templates/pages/text.handlebars
+++ b/assets/templates/pages/text.handlebars
@@ -53,6 +53,13 @@
   </div>
 </div>
 <div class='mdl-grid'>
+  <div class='mdl-cell mdl-cell--12-col'>
+    <h4>
+      Textareas
+    </h4>
+  </div>
+</div>
+<div class='mdl-grid'>
   <div class='mdl-cell mdl-cell--3-col'>
     {{view 'components/text/area' data=components.textarea}}
   </div>
