--- a/assets/templates/components/text/input.handlebars
+++ b/assets/templates/components/text/input.handlebars
@@ -3,9 +3,7 @@
 </iron-icon>
 {{/if}}
 {{#if data.text_suffix}}
-<div suffix>
-  {{data.text_suffix}}
-</div>
+<div suffix>{{data.text_suffix}}</div>
 {{/if}}
 {{#if data.icon_suffix}}
 <iron-icon icon="{{data.icon_suffix}}" suffix>
