[CHANGED] Checkbox and radio from view to component

--- a/assets/templates/components/toggles/radio.handlebars
+++ b/assets/templates/components/toggles/radio.handlebars
@@ -1,3 +1,1 @@
-<paper-radio-button id="{{display.id}}" class="{{display.classes}}" {{{display.attrs}}}>
-  {{display.label}}
-</paper-radio-button>
+<span>{{display.label}}</span>
