--- a/assets/templates/components/toggles/switch.handlebars
+++ b/assets/templates/components/toggles/switch.handlebars
@@ -1,3 +1,1 @@
-<paper-toggle-button id="{{display.id}}" class="{{display.classes}}" {{{display.attrs}}}>
-  {{display.label}}
-</paper-toggle-button>
+<span>{{display.label}}</span>
