[CHANGED] item and menu from views to components

--- a/views/index.jade
+++ b/views/index.jade
@@ -45,7 +45,7 @@ html
     script(src="/vendor/moment/moment.js")
     script(src="/vendor/web-animations-js/web-animations.min.js")
     script(src="/js/libs/view.js")
-    script(src="/js/libs/components.js")
+    script(src="/js/libs/component.js")
     script(src="/js/libs/collection.js")
     script(src="/js/libs/handlebars_helpers.js")
     script(src="/js/libs/model.js")
