--- a/assets/templates/components/general/item.handlebars
+++ b/assets/templates/components/general/item.handlebars
@@ -1,5 +1,5 @@
 {{#if display.view}}
 {{view display.view data=display.view_data}}
 {{else}}
-{{display.text}}
+<span>{{display.text}}</span>
 {{/if}}
