--- a/assets/templates/pages/home.handlebars
+++ b/assets/templates/pages/home.handlebars
@@ -14,6 +14,9 @@
     {{view 'components/card/main' data=components.selection}}
   </div>
   <div class='mdl-cell mdl-cell--4-col mdl-cell--8-col-tablet mdl-cell--4-col-phone'>
+    {{view 'components/card/main' data=components.misc}}
+  </div>
+  <div class='mdl-cell mdl-cell--4-col mdl-cell--8-col-tablet mdl-cell--4-col-phone'>
     {{view 'components/card/main' data=components.test}}
   </div>
 </div>
