--- a/views/index.jade
+++ b/views/index.jade
@@ -32,6 +32,7 @@ html
     script(type="text/javascript", src="/templates/layouts/main.js")
     script(type="text/javascript", src="/templates/pages/buttons.js")
     script(type="text/javascript", src="/templates/pages/home.js")
+    script(type="text/javascript", src="/templates/pages/misc.js")
     script(type="text/javascript", src="/templates/pages/selection.js")
     script(type="text/javascript", src="/templates/pages/test.js")
     script(type="text/javascript", src="/templates/pages/text.js")
@@ -65,6 +66,7 @@ html
     script(src="/js/application/layouts/main.js")
     script(src="/js/application/pages/buttons.js")
     script(src="/js/application/pages/home.js")
+    script(src="/js/application/pages/misc.js")
     script(src="/js/application/pages/selection.js")
     script(src="/js/application/pages/test.js")
     script(src="/js/application/pages/text.js")
