[ADDED] paper dropdown menu, menu events, initial selection

--- a/assets/templates/pages/selection.handlebars
+++ b/assets/templates/pages/selection.handlebars
@@ -44,13 +44,16 @@
   </div>
 </div>
 <div class='mdl-grid'>
-  <div class='mdl-cell mdl-cell--3-col'>
+  <div class='mdl-cell mdl-cell--6-col'>
     <h4>
       Menu
     </h4>
     <div class='mdl-grid'>
-      <div class='mdl-cell mdl-cell--12-col'>
+      <div class='mdl-cell mdl-cell--6-col'>
         {{view 'components/general/menu' data=components.menu}}
+      </div>
+      <div class='mdl-cell mdl-cell--6-col'>
+        {{view 'components/general/menu' data=components.menu_multi}}
       </div>
     </div>
   </div>
