--- a/views/index.jade
+++ b/views/index.jade
@@ -24,6 +24,7 @@ html
     script(type="text/javascript", src="/templates/components/card/main.js")
     script(type="text/javascript", src="/templates/components/general/item.js")
     script(type="text/javascript", src="/templates/components/general/menu.js")
+    script(type="text/javascript", src="/templates/components/general/selection.js")
     script(type="text/javascript", src="/templates/components/text/area.js")
     script(type="text/javascript", src="/templates/components/text/input.js")
     script(type="text/javascript", src="/templates/components/toggles/checkbox.js")
@@ -58,6 +59,7 @@ html
     script(src="/js/application/components/card/main.js")
     script(src="/js/application/components/general/item.js")
     script(src="/js/application/components/general/menu.js")
+    script(src="/js/application/components/general/selection.js")
     script(src="/js/application/components/text/area.js")
     script(src="/js/application/components/text/input.js")
     script(src="/js/application/components/toggles/checkbox.js")
