[ADDED} Selection, worked out bugs,
no-animation attribute must be true otherwise there will be a bug.

--- a/assets/templates/pages/selection.handlebars
+++ b/assets/templates/pages/selection.handlebars
@@ -57,4 +57,16 @@
       </div>
     </div>
   </div>
+  <div class='mdl-cell mdl-cell--6-col'>
+    <h4>
+      Seletion
+    </h4>
+    <div class='mdl-grid'>
+      <div class='mdl-cell mdl-cell--6-col'>
+        {{view 'components/general/selection' data=components.selection}}
+      </div>
+      <div class='mdl-cell mdl-cell--6-col'>
+      </div>
+    </div>
+  </div>
 </div>
