--- a/views/index.jade
+++ b/views/index.jade
@@ -45,6 +45,7 @@ html
 
     // SCRIPTS
     script(src="/vendor/moment/moment.js")
+    script(src="/vendor/web-animations-js/web-animations-next-lite.min.js")
     script(src="/vendor/web-animations-js/web-animations.min.js")
     script(src="/js/libs/view.js")
     script(src="/js/libs/component.js")
@@ -93,6 +94,7 @@ html
     link(rel="import", href="/vendor/iron-icons/social-icons.html")
     link(rel="import", href="/vendor/iron-flex-layout/iron-flex-layout.html")
     link(rel="import", href="/vendor/iron-flex-layout/iron-flex-layout-classes.html")
+    link(rel="import", href="/vendor/paper-listbox/paper-listbox.html")
     // WEB COMPONENTS END
   body
     #main-content(page-name='#{page}',style='height: 100%')
