[CHANGED] Improved listening to attribute changes on components

--- a/assets/templates/pages/selection.handlebars
+++ b/assets/templates/pages/selection.handlebars
@@ -66,6 +66,7 @@
         {{view 'components/general/selection' data=components.selection}}
       </div>
       <div class='mdl-cell mdl-cell--6-col'>
+        {{view 'components/general/selection' data=components.selection_disabled}}
       </div>
     </div>
   </div>
